--- a/app/launchpad.html
+++ b/app/launchpad.html
@@ -29,6 +29,14 @@
                         applicationType: "URL",
                         url: "./bsnc_vat_0010/webapp",
                         navigationMode: "embedded"
+                    },
+                    "bsnc_vat_0040-app": {
+                        title: "부가세기준정보",
+                        description: "부가세기준정보 관리",
+                        additionalInformation: "SAPUI5.Component=ns.bsncvat0040",
+                        applicationType: "URL",
+                        url: "./bsnc_vat_0040/webapp",
+                        navigationMode: "embedded"
                     }
                     // "mitigations-app": {
                     //     title: "Mitigations",
@@ -57,6 +65,7 @@
             });
         </script>
     </head>
+    
     <body class="sapUiBody" id="content"></body>
 </html>
 </head>
