--- a/app/launchpad.html
+++ b/app/launchpad.html
@@ -21,13 +21,21 @@
                         applicationType: "URL",
                         url: "./bsnc_vat_0000/webapp",
                         navigationMode: "embedded"
-                    },
+                    },                    
                     "bsnc_vat_0010-app": {
                         title: "환경설정",
                         description: "부가세 신고를 위한 기준 정보를 관리 함",
                         additionalInformation: "SAPUI5.Component=ns.bsncvat0010",
                         applicationType: "URL",
                         url: "./bsnc_vat_0010/webapp",
+                        navigationMode: "embedded"
+                    },
+                    "bsnc_vat_0030-app": {
+                        title: "단위사업장 적용번호",
+                        description: "단위사업장적용번호 관리",
+                        additionalInformation: "SAPUI5.Component=ns.bsncvat0030",
+                        applicationType: "URL",
+                        url: "./bsnc_vat_0030/webapp",
                         navigationMode: "embedded"
                     },
                     "bsnc_vat_0040-app": {
