--- a/app/launchpad.html
+++ b/app/launchpad.html
@@ -45,6 +45,14 @@
                         applicationType: "URL",
                         url: "./bsnc_vat_0040/webapp",
                         navigationMode: "embedded"
+                    },
+                    "bsnc_vat_0050-app": {
+                        title: "경감공제 가산세액",
+                        description: "경감공제 가산세액관리",
+                        additionalInformation: "SAPUI5.Component=ns.bsncvat0050",
+                        applicationType: "URL",
+                        url: "./bsnc_vat_0050/webapp",
+                        navigationMode: "embedded"
                     }
                     // "mitigations-app": {
                     //     title: "Mitigations",
