--- a/app/launchpad.html
+++ b/app/launchpad.html
@@ -53,6 +53,14 @@
                         applicationType: "URL",
                         url: "./bsnc_vat_0050/webapp",
                         navigationMode: "embedded"
+                    },
+                    "bsnc_vat_0060-app": {
+                        title: "부가세자료생성",
+                        description: "부가세자료생성",
+                        additionalInformation: "SAPUI5.Component=ns.bsncvat0060",
+                        applicationType: "URL",
+                        url: "./bsnc_vat_0060/webapp",
+                        navigationMode: "embedded"
                     }
                     // "mitigations-app": {
                     //     title: "Mitigations",
