--- a/app/launchpad.html
+++ b/app/launchpad.html
@@ -61,6 +61,14 @@
                         applicationType: "URL",
                         url: "./bsnc_vat_0060/webapp",
                         navigationMode: "embedded"
+                    },
+                    "bsnc_vat_0080-app": {
+                        title: "부가세자료관리",
+                        description: "부가세자료 조회",
+                        additionalInformation: "SAPUI5.Component=ns.bsncvat0080",
+                        applicationType: "URL",
+                        url: "./bsnc_vat_0080/webapp",
+                        navigationMode: "embedded"
                     }
                     // "mitigations-app": {
                     //     title: "Mitigations",
